; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_char_text.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_char_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value_buffer = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.value_buffer*, i8)* @value_buffer_output_char_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @value_buffer_output_char_text(%struct.value_buffer* %0, i8 signext %1) #0 {
  %3 = alloca %struct.value_buffer*, align 8
  %4 = alloca i8, align 1
  store %struct.value_buffer* %0, %struct.value_buffer** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load i8, i8* %4, align 1
  %6 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %7 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %6, i32 0, i32 0
  %8 = load i8*, i8** %7, align 8
  store i8 %5, i8* %8, align 1
  %9 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %10 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 8
  %13 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %14 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
